learning JVM.md updated from https://stackedit.io/